# Parallel-Mesh-Generator

./: .gitignore  CMakeLists.txt
src/: MySTL.cpp  MySTL.h  common.cpp  common.h  cuda_meshgen.cuh  cuda_pip.cuh  grainmesh.cpp  grainmesh.h  iotetgen.cpp  iotetgen.h  kernel.cu  meshcut.cpp  meshcut.h  meshoperations.cpp  meshoperations.h  meshsmooth.cpp  meshsmooth.h  mymesh.cpp  mymesh.h
